# rusty-home

./: .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  build_and_push.sh  clippy.toml  docker-compose.yaml
.claude/: settings.json
app/: Cargo.toml
app/src/: CLAUDE.md  main.rs  port.rs  settings.rs
app/src/adapter/: mod.rs
app/src/adapter/energy_meter/: http_server.rs  incoming.rs  mod.rs  persistence.rs
app/src/adapter/grafana/: display.rs  mod.rs  support.rs
app/src/adapter/homeassistant/: config.rs  incoming.rs  mod.rs  outgoing.rs
app/src/adapter/homebridge/: hap.rs  mod.rs  runtime.rs
app/src/adapter/homekit/: command.rs  mapper.rs  mod.rs  runtime.rs  state.rs
app/src/adapter/mcp/: mod.rs  server.rs
app/src/adapter/metrics_export/: api.rs  exporter.rs  mod.rs  repository.rs  tags.rs
app/src/adapter/tasmota/: config.rs  incoming.rs  mod.rs  outgoing.rs
app/src/adapter/z2m/: config.rs  incoming.rs  mod.rs  outgoing.rs
app/src/automation/: CLAUDE.md  mod.rs
app/src/automation/domain/: common.rs  config.rs  goal.rs  mod.rs  resource_plan.rs
app/src/automation/planner/: action.rs  mod.rs  processor.rs  resource_lock.rs  trace.rs
app/src/command/: CLAUDE.md  mod.rs  service.rs
app/src/command/adapter/: db.rs  mod.rs
app/src/command/domain/: command_state.rs  mod.rs
app/src/core/: CLAUDE.md  api.rs  app_event.rs  command.rs  id.rs  incoming_data.rs  math.rs  metrics.rs  mod.rs  range.rs  resilience.rs  state.rs
app/src/core/api/: cache.rs  mod.rs
app/src/core/domain/: mod.rs
app/src/core/persistence/: availability.rs  command.rs  listener.rs  mod.rs  planning_trace.rs  state.rs  trigger.rs
app/src/core/planner/: action.rs  context.rs  mod.rs  processor.rs  trace.rs
app/src/core/time/: builder.rs  datetime.rs  duration.rs  mod.rs  range.rs  time.rs
app/src/core/timeseries/: dataframe.rs  datapoint.rs  interpolate.rs  mod.rs
app/src/core/unit/: absolute_humidity.rs  air_quality.rs  degree_celsius.rs  density.rs  derivative.rs  fan.rs  kwh.rs  light.rs  mod.rs  percent.rs  probability.rs  raw_value.rs  watt.rs
app/src/device_state/: CLAUDE.md  mod.rs  service.rs
app/src/device_state/adapter/: mod.rs
app/src/device_state/domain/: allergen_index.rs  current_power_usage.rs  energy_saving.rs  fan_activity.rs  heating_demand.rs  heating_demand_limit.rs  light_level.rs  mod.rs  opened.rs  particulate_matter.rs  power_available.rs  presence.rs  raw_vendor_value.rs  relative_humidity.rs  set_point.rs  temperature.rs  total_energy_consumption.rs  total_radiator_consumption.rs  total_water_consumption.rs
app/src/frontends/: mod.rs
app/src/frontends/energy_meter/: CLAUDE.md  http_server.rs
app/src/frontends/homekit/: CLAUDE.md  hap.rs  mod.rs  runtime.rs
app/src/frontends/mcp/: mod.rs  server.rs
app/src/frontends/remote/: CLAUDE.md  mod.rs  service.rs
app/src/home/: common.rs  config.rs  goal.rs  mod.rs  state_registry.rs
app/src/home/action/: cool_down_when_occupied.rs  dehumidify.rs  follow_default_setting.rs  inform_window_open.rs  keep_user_override.rs  mod.rs  reduce_noise_at_night.rs  request_closing_window.rs  user_trigger_action.rs
app/src/home/command/: command_state.rs  mod.rs
app/src/home/state/: absolute_humidity.rs  automatic_temp_inc.rs  cold_air_coming_in.rs  current_power_usage.rs  dewpoint.rs  energy_saving.rs  external_auto_control.rs  fan_activity.rs  felt_temperature.rs  heating_demand.rs  is_running.rs  light_level.rs  load.rs  mod.rs  occupancy.rs  opened.rs  power_available.rs  powered.rs  presence.rs  raw_vendor_value.rs  relative_humidity.rs  resident.rs  risk_of_mould.rs  scheduled_heating_mode.rs  set_point.rs  target_heating_mode.rs  temperature.rs  total_energy_consumption.rs  total_radiator_consumption.rs  total_water_consumption.rs  user_controlled.rs
app/src/home/tests/: action.rs  mod.rs  planning.rs  state.rs
app/src/home/trigger/: mod.rs
app/src/home_state/: CLAUDE.md  mod.rs
app/src/home_state/calc/: context.rs  datasource.rs  iter.rs  mod.rs  snapshot.rs
app/src/home_state/items/: absolute_humidity.rs  allergen_index.rs  automatic_temp_inc.rs  cold_air_coming_in.rs  dewpoint.rs  energy_saving.rs  fan_activity.rs  felt_temperature.rs  heating_demand.rs  heating_demand_limit.rs  is_running.rs  load.rs  mod.rs  occupancy.rs  opened.rs  particulate_matter.rs  pid_output.rs  power_available.rs  presence.rs  raw_vendor_value.rs  relative_humidity.rs  resident.rs  risk_of_mould.rs  set_point.rs  target_heating_adjustment.rs  target_heating_demand.rs  target_heating_mode.rs  temperature.rs  temperature_change.rs  ventilation.rs
app/src/observability/: CLAUDE.md  domain.rs  mod.rs
app/src/observability/adapter/: device_metrics.rs  home_metrics.rs  mod.rs  repository.rs
app/src/trigger/: CLAUDE.md  mod.rs  service.rs
brain/: Cargo.toml
brain/src/: error.rs  main.rs  port.rs  prelude.rs  settings.rs
brain/src/adapter/: mod.rs
brain/src/core/: app_event.rs  command.rs  event.rs  id.rs  metrics.rs  mod.rs
brain/src/home/: config.rs  goal.rs  mod.rs
brain/src/planning/: config.rs  goal.rs  mod.rs
brain/src/state/: cold_air_coming_in.rs  energy_saving.rs  mod.rs  resident.rs
brain/src/support/: metrics.rs  mod.rs  result.rs
brain/src/thing/: mod.rs
kraken/: Cargo.toml
kraken/src/: config.rs  error.rs  main.rs  migration.rs  port.rs  settings.rs
kraken/src/adapter/: config.rs  energy_meter.rs  mod.rs
kraken/src/core/: app_event.rs  incoming_data.rs  mod.rs
kraken/src/domain/: command.rs  mod.rs  state.rs
kraken/src/energy_meter/: incoming.rs  mod.rs
kraken/src/homeassistant/: command.rs  config.rs  incoming.rs  mod.rs  outgoing.rs  state.rs
kraken/src/tasmota/: command.rs  config.rs  event.rs  incoming.rs  mod.rs
kraken/src/z2m/: config.rs  incoming.rs  mod.rs
lib/api/: Cargo.toml
lib/api/src/: error.rs  lib.rs
lib/infrastructure/: CLAUDE.md  Cargo.toml
lib/infrastructure/src/: lib.rs
lib/monitoring/: Cargo.toml
lib/monitoring/src/: lib.rs  meter.rs  trace.rs
lib/support/: Cargo.toml
lib/support/src/: file.rs  lib.rs
(+491 files in other folders)
