[workspace]
members = ["app"]
resolver = "2"

[workspace.dependencies]
#Core dependencies
anyhow = "1"
config = { version = "0.15.15", features = ["toml"] }
derive_more = { version = "2", features = [
  "from",
  "as_ref",
  "display",
  "error",
] }

#Async dependencies
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "*"

#Time dependencies
chrono = { version = "0.4", features = ["serde", "std"] }
chrono-humanize = "0.2"
iso8601-duration = { version = "0.2", features = ["serde", "chrono"] }

#Data format dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"

#MQTT dependencies
rumqttc = "*"

#Web dependencies
actix-web = "4"
reqwest = { version = "*", features = ["json", "stream"] }
reqwest-middleware = { version = "*", features = ["json"] }
mime = "0.3"

#MCP dependencies
rmcp = { version = "0.8", features = ["server", "macros"] }
rmcp-actix-web = "0.8"

#DB Dependencies
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
] }

#Caching dependencies
cached = { version = "0.56", features = ["default", "async"] }
moka = { version = "0.12", features = ["future"] }

#Tracing dependencies
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-appender-tracing = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["trace", "rt-tokio"] }
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_29"] }
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_29"] }

#Test dependencies
assert-json-diff = "2"
mockito = "1"

linfa = "0.8"
linfa-logistic = "0.8"
linfa-linear = "0.8"
ndarray = "0.16"
