[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }

sqlx = { workspace = true }
#Only for compatibility with sqlx-mapping
chrono = { workspace = true }
iso8601-duration = { workspace = true }
chrono-humanize = { workspace = true }
moka = { workspace = true }

config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

cached = { workspace = true }

actix-web = { workspace = true }
mime = { workspace = true }

rmcp = { workspace = true }
rmcp-actix-web = { workspace = true }

macro = { path = "../lib/macro" }
infrastructure = { path = "../lib/infrastructure" }

reqwest = { workspace = true }
reqwest-middleware = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
mockito = "1"
