[package]
name = "brain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "*"
enum_dispatch = "0.3"
derive_more = { version = "1", features = ["display", "error"] }
tracing = "*"
tracing-subscriber = "*"
uuid = { version = "1", features = ["v4"] }

sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
  "uuid",
] }
moka = { version = "0.12", features = ["future"] }

config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"

actix-web = "4"
mime = "0.3"
tabled = "0"

api = { path = "../lib/api" }
support = { path = "../lib/support" }
macro = { path = "../lib/macro" }
monitoring = { path = "../lib/monitoring" }

[dev-dependencies]
assert-json-diff = "2.0.2"
tokio-shared-rt = "*"
