[package]
name = "brain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

sqlx = { workspace = true }
#Only for compatibility with sqlx-mapping
chrono = { workspace = true }
moka = { workspace = true }

config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

actix-web = { workspace = true }
mime = { workspace = true }

api = { path = "../lib/api" }
support = { path = "../lib/support" }
macro = { path = "../lib/macro" }
infrastructure = { path = "../lib/infrastructure" }

[dev-dependencies]
assert-json-diff = { workspace = true }
