[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rumqttc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "*"
tracing = "*"
tracing-subscriber = "*"
reqwest = { version = "*", features = ["json"] }

config = { version = "0.14.0", features = ["toml"] }

sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
] }
derive_more = { version = "1", features = ["from"] }
actix-web = "4"

api = { path = "../lib/api" }
support = { path = "../lib/support" }
monitoring = { path = "../lib/monitoring" }

[dev-dependencies]
assert-json-diff = "2"
