[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

config = { workspace = true }

sqlx = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
actix-web = { workspace = true }

api = { path = "../lib/api" }
support = { path = "../lib/support" }
monitoring = { path = "../lib/monitoring" }

[dev-dependencies]
assert-json-diff = { workspace = true }
