[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = { version = "*", features = ["default", "async"] }
tracing = "*"

support = { path = "../support" }
macro = { path = "../macro" }


[dev-dependencies]
assert-json-diff = "2"
