[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
cached = { workspace = true }
tracing = { workspace = true }

support = { path = "../support" }
macro = { path = "../macro" }


[dev-dependencies]
assert-json-diff = { workspace = true }
