[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

#Tracing dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

serde = { workspace = true }
cached = { workspace = true }

#MQTT dependencies
rumqttc = { workspace = true }
tokio = { workspace = true }

#DB Dependencies
sqlx = { workspace = true }

#HTTP dependencies
actix-web = { workspace = true }
tracing-actix-web = { workspace = true }

reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
