[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = "0.27"
opentelemetry-stdout = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-appender-tracing = "0.27"

serde = "1"
