[package]
name = "support"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }

iso8601-duration = { workspace = true }
chrono-humanize = { workspace = true }

#For task-local 
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
